# bgand256

./: .gitignore  CLAUDE.md  README.adoc  apeyedoc.py  api.py  install.sh  pyproject.toml  test_256_colors.py  test_improved.py  test_optimization.py  test_performance.py  test_simple.py
api/: colour-science-api.short.yaml  colour.api  num.api  sci.api
src/bgand256/: __init__.py  algorithms_approximate.py  algorithms_combined.py  algorithms_geometric.py  algorithms_kmeans_init.py  algorithms_memoized.py  algorithms_parallel.py  algorithms_progressive.py  algorithms_spatial.py  algorithms_vectorized.py  cli.py  color_utils.py  colors.py  contrast_algorithms.py  contrast_algorithms_optimized.py  image_generation.py  main.py  pymp.py
tests/: __init__.py  conftest.py  test_cli.py  test_colors.py  test_contrast_algorithms.py  test_contrast_algorithms_unit.py  test_image_generation.py
